--- a/app/src/main/res/layout/messaging_list_rows.xml
+++ b/app/src/main/res/layout/messaging_list_rows.xml
@@ -19,8 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:textAlignment="center" />
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/message"
