--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -2,13 +2,14 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout4"
+    android:id="@+id/constraintLayoutLandingFrag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chatApp.LandingFragment"
     tools:layout_editor_absoluteY="25dp">
 
-    <android.support.constraint.ConstraintLayout
+    <!--
+    <android.support.constraint.ConstraintLayout>
         android:id="@+id/constraintLayout"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -19,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="0dp">
-
+    -->
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
@@ -132,7 +133,7 @@
         android:layout_marginTop="8dp"
         android:text="Saved Locs"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLandingFrag" />
 
     <ImageButton
         android:id="@+id/createNewChatFragNewChatButton"
@@ -151,17 +152,10 @@
         android:layout_marginBottom="8dp"
         android:footerDividersEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/createNewChatFragNewChatButton"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
-    <Button
-        android:id="@+id/landing_map_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Map"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/landing_recyclerview"
@@ -189,5 +183,15 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/landing_map_button" />
+
+    <Button
+        android:id="@+id/landing_map_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Map"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLandingFrag" />
 
 </android.support.constraint.ConstraintLayout>
